# simple-slideshow

./: Cargo.toml
src/: main.rs  markdown.rs
