[package]
name = "builder"
version = "0.1.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.7.1"
structopt = "0.3.15"
handlebars = "3.1.0"
notify = "4.0.15"
thiserror = "1.0.20"
walkdir = "2.3.1"
serde = { version = "1.0.113", features = ["derive"] }
tracing = "0.1.15"
tracing-subscriber = "0.2.6"
